# CellSegmentation

./: .gitignore  CMakeLists.txt  main.cpp
cmake-modules/: FindOpenCV.cmake  Macros.cmake
libs/: CMakeLists.txt
libs/LibtorchSegmentation/: CMakeLists.txt
libs/LibtorchSegmentation/src/: SegDataset.h  Segmentor.h
libs/LibtorchSegmentation/src/architectures/: DeepLab.h  DeepLabDecoder.h  FPN.h  FPNDecoder.cpp  FPNDecoder.h  LinkNet.h  LinknetDecoder.h  PAN.h  PANDecoder.h  PSPNet.h  PSPNetDecoder.h  UNet.h  UNetDecoder.h
libs/LibtorchSegmentation/src/backbones/: ResNet.h  VGG.h
libs/LibtorchSegmentation/src/utils/: Augmentations.h  InterFace.h  loss.h  readfile.h  util.h
